# ska-mid-dish-steering-control

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.rst  CODEOWNERS  Makefile  README.md  pyproject.toml  requirements.txt
docs/src/: conf.py  index.rst
docs/src/api/: sculib.rst
scripts/: generate_gpm_schema.py
src/disq/: sculib.py
src/ska_dish_steering_control/: __init__.py  constants.py  sculib.py  track_table.py
src/ska_mid_dish_steering_control/: __init__.py  constants.py  sculib.py  static_pointing.py  track_table.py  utils.py
src/ska_mid_dish_steering_control/certs/: SimpleServer_2048.der
src/ska_mid_dish_steering_control/schemas/: ska-mid-dish-gpm.json
tests/: conftest.py  test_nothing.py  test_static_pointing.py  test_steering_control_unit.py  test_track_table.py
tests/resources/: gpm-SKA063-Band_2.json  track_table_excel.csv  track_table_simple.csv  track_table_tabs.csv  track_table_unix_quoted.csv  v0.1EL88_AZ0_extra_columns.csv
